patches/paste/pastey-test-suite/tests/ui/no-value-before-replace.rs
use pastey::paste;

macro_rules! m {
    () => {
        paste! {
            struct [< :replace("H", "W") >];
        }
    };
}

m!();

fn main() {}
